--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
+    "react-router-dom": "6",
+    "react-toastify": "^8.2.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
